fix alignment

--- a/css/viscovery.css
+++ b/css/viscovery.css
@@ -276,7 +276,8 @@ section.container {
   padding-top: 110px;
 }
 
-.section-3, .section-4 .title-text {
+.section-3 .title-text,
+.section-4 .title-text {
   padding-left : 80px;
   padding-top: 54px;
 }
